--- a/mTime/mTime/mTime.vbproj
+++ b/mTime/mTime/mTime.vbproj
@@ -187,6 +187,7 @@
     <Compile Include="Controllers\Login.vb" />
     <Compile Include="Controllers\MessageController.vb" />
     <Compile Include="Controllers\PersonalMessageController.vb" />
+    <Compile Include="Controllers\FeedbackController.vb" />
     <Compile Include="Controllers\PoorAttendanceReasonController.vb" />
     <Compile Include="Controllers\AttendanceStatusController.vb" />
     <Compile Include="Controllers\ReportController.vb" />
@@ -206,6 +207,9 @@
     <Compile Include="Models\SettingModel.vb" />
     <Compile Include="Models\ShiftModel.vb" />
     <Compile Include="Models\StaffModel.vb" />
+    <Compile Include="Models\PersonalMessageModel.vb" />
+    <Compile Include="Models\FeedbackModel.vb" />
+    <Compile Include="Models\AnnouncementModel.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -384,6 +388,7 @@
     <Content Include="Views\Shift\Details.vbhtml" />
     <Content Include="Views\Shift\Edit.vbhtml" />
     <Content Include="Views\Shift\Delete.vbhtml" />
+    <Content Include="Views\Feedback\Index.vbhtml" />
     <Content Include="scss\bootstrap-grid.scss" />
     <Content Include="scss\bootstrap-reboot.scss" />
     <Content Include="scss\bootstrap.scss" />
@@ -509,6 +514,7 @@
     <Content Include="Views\Message\_PersonalMessage.vbhtml" />
     <Content Include="Views\Message\_Announcement.vbhtml" />
     <Content Include="Views\Message\_Feedback.vbhtml" />
+    <Content Include="Views\Message\_NewPersonalMessage.vbhtml" />
     <Content Include="Views\Report\Index.vbhtml" />
     <Content Include="Views\Report\_RatioAnalysis.vbhtml" />
     <Content Include="Views\Report\_ByEmployee.vbhtml" />
@@ -522,6 +528,7 @@
     <Content Include="Views\Shift\Index.vbhtml" />
     <Content Include="Views\Department\Index.vbhtml" />
     <Content Include="Views\System\Create.vbhtml" />
+    <Content Include="Views\System\Edit.vbhtml" />
     <Content Include="Views\System\CompanyInfoUpdate.vbhtml" />
     <Content Include="Views\System\UploadImg.vbhtml" />
     <Content Include="Views\System\Setting.vbhtml" />
