Please help to study the complex model in Staff Model

--- a/mTime/mTime/Web.config
+++ b/mTime/mTime/Web.config
@@ -58,8 +58,24 @@
   <connectionStrings>
     <!--<add name="mTimeEntities" connectionString="metadata=res://*/Models.mTime.csdl|res://*/Models.mTime.ssdl|res://*/Models.mTime.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-FPM7EFQ\SQLEXPRESS;initial catalog=mTime;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="HyperlinkDBContext" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <add name="MasterDB" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="MasterDB" connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
     <!--<add name="MasterDB" connectionString="Data Source=DESKTOP-UBVDK6O\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
-    <!--<add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />-->
+    <add name="MasterDB" connectionString="Data Source=DESKTOP-FPM7EFQ\SQLEXPRESS;Initial Catalog=mTime;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <!--<add name="FirebirdDB"
+    connectionString="character set=UTF8; data source=localhost;
+    initial catalog=examples; port number=3050;
+    user id=sysdba; dialect=3; isolationlevel=Snapshot;
+    pooling=True; password=masterkey;"
+    providerName="FirebirdSql.Data.FirebirdClient" />-->
+
+    <!--<add name="FirebirdDB" connectionString="DSN=EntryPass Company" providerName="FirebirdSql.Data.FirebirdClient"/>-->
+
+    <!--User=SYSDBA;Password=masterkey;Database=C:\USINGFIREBIRD.FDB;DataSource=localhost; Port=3050;-->
+    
+    <!--<add name="FirebirdDB"
+         connectionString="User ID=sysdba;Password=masterkey;Database=C:\EntryPass\P1_Server\database\COMPANY.FDB;"
+         providerName="FirebirdSql.Data.FirebirdClient" />-->   
+  
+
   </connectionStrings>
 </configuration>
