--- a/mTime/mTime/packages.config
+++ b/mTime/mTime/packages.config
@@ -19,5 +19,6 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
